# CYDRemoteControl

./: .gitignore  CMakeLists.txt  README.md  filelist.txt  flash.html  manifest.json  merge_firmware.py  platformio.ini
src/: ESP32Button.h  SubjectObserverTemplate.h  backlight.cpp  backlight.h  main.cpp  wifi_udp.cpp  wifi_udp.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Basic_Settings_Screen.c  ui_Basic_Settings_Screen.h  ui_Cards_Screen.c  ui_Cards_Screen.h  ui_Central_Screen.c  ui_Central_Screen.h  ui_Cyrano_Screen.c  ui_Cyrano_Screen.h  ui_No_Connection_Screen.c  ui_No_Connection_Screen.h  ui_Power_Settings_Screen.c  ui_Power_Settings_Screen.h  ui_Set_Time_Screen.c  ui_Set_Time_Screen.h  ui_SpecificSettingsScreen.c  ui_SpecificSettingsScreen.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_icons_icon_home_png.c  ui_img_icons_icon_next_png.c  ui_img_icons_icon_prev_png.c  ui_img_icons_icon_settings_png.c
